fixed filter menu to work on mobile and better on desktop

--- a/styles/components/Gallery.module.scss
+++ b/styles/components/Gallery.module.scss
@@ -14,7 +14,17 @@
     height: 100%;
   }
 
+    @media (max-width: 455px) { // mobile
+      .gallery_filter_menu {
+        width: 100% !important;
+        border-bottom-left-radius: 0px !important;
+        border-left: None !important;
+      }
+    }
     @media (max-width: 800px) { // mobile
+      .gallery_filter_menu_tooltip {
+        display: none;
+      }
       .gallery_filter_menu_toggle {
         position: fixed;
         top: 50px;
@@ -22,18 +32,16 @@
         width: 50px;
         height: 50px; 
         color: $light !important;
+        background-color: $secondary !important;
         border-top-right-radius: 5px;
         border-top-left-radius: 5px;
-      }
-      .gallery_filter_menu_toggle:hover {
-        background-color: $light !important;
-        color: $dark !important;
       }
         .gallery_filter_menu_toggle_icon {
           width: 40px !important;
           height: 40px !important;
           margin: 5px;
         }
+
       .gallery_filter_menu_toggle_open {
         position: fixed;
         top: 50px;
@@ -44,18 +52,14 @@
         background-color: $light !important;
         border-top-right-radius: 5px;
         border-top-left-radius: 5px;
+        z-index: 1;
       }
-      .gallery_filter_menu_toggle_open:hover {
-        background-color: $secondary !important;
-        color: $light !important;
-      }
-
       .gallery_filter_menu {
         position: fixed; 
         top: 100px; 
         right: 0px;
-        width: fit-content; 
         min-height: 50px;
+        max-width: 100vw !important;
         background-color: $primary; 
         border-bottom: 2px solid $secondary;
         border-left: 2px solid $secondary;
@@ -63,21 +67,43 @@
         z-index: 1;
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
       }
+
       .gallery_filter_menu > .gallery_filter_icon_container:first-of-type {
         border-top-left-radius: 4px !important;
       }
+
+      .gallery_filter_icon_container {
+        width: 50px;
+        height: 50px;
+        background-color: $primary;
+        color: $dark;
+      }
+      .gallery_filter_icon_container_selected {
+        width: 50px;
+        height: 50px;
+        background-color: $light !important;
+        color: $dark !important;
+      }
+        .gallery_filter_icon {
+          width: 40px !important;
+          height: 40px !important;
+          margin: 5px;
+        }
     }
     @media (min-width: 799px) { // browser
       .gallery_filter_menu_toggle {
         position: fixed;
         top: 50px;
         right: 150px;
-        width: 50px;
+        width: fit-content;
         height: 50px; 
         color: $light !important;
         border-top-right-radius: 5px;
         border-top-left-radius: 5px;
+        display: flex;
+        flex-direction: row;
       }
       .gallery_filter_menu_toggle:hover {
         background-color: $light !important;
@@ -92,21 +118,35 @@
         position: fixed;
         top: 50px;
         right: 150px;
-        width: 50px;
+        width: fit-content;
         height: 50px; 
         color: $dark !important;
         background-color: $light !important;
         border-top-right-radius: 5px;
+        border-top-left-radius: 5px;
+        display: flex;
+        flex-direction: row;
+        z-index: 1;
       }
       .gallery_filter_menu_toggle_open:hover {
-        background-color: $secondary !important;
+        background-color: $primary !important;
         color: $light !important;
       }
-
+      .gallery_filter_menu_tooltip {
+        position: relative; 
+        width: fit-content;
+        font-size: 24px;
+        line-height: 50px;
+        margin-right: 5px;
+        margin-left: 10px;
+        font-weight: bold;
+      }
+      .gallery_filter_menu_container { 
+        position: relative; 
+        width: fit-content; 
+      }
       .gallery_filter_menu {
-        position: fixed; 
-        top: 50px; 
-        right: 200px;
+        position: relative; 
         width: fit-content; 
         min-height: 50px;
         background-color: $light; 
@@ -118,7 +158,7 @@
       .gallery_filter_menu > .gallery_filter_icon_container:first-of-type {
         border-top-left-radius: 4px !important;
       }
-    }
+
       .gallery_filter_icon_container {
         width: 50px;
         height: 50px;
@@ -139,6 +179,8 @@
           height: 40px !important;
           margin: 5px;
         }
+    }
+
 
 
   .gallery_body { 
